| Summary: | ASTERISK-28644: Stale comment in app_queue about ring_entry exception | ||
| Reporter: | Walter Doekes (wdoekes) | Labels: | |
| Date Opened: | 2019-12-03 02:25:27.000-0600 | Date Closed: | 2019-12-06 13:31:14.000-0600 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 16.6.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {noformat}
commit 465a7518ccf06550b131e6dae8e41eaa4243c1ba Author: Mark Spencer <markster@digium.com> Date: Wed Aug 13 18:58:01 2003 +0000 Do the right thing with ringall queues with entries that have penalties {noformat} {noformat} @@ -738,10 +749,7 @@ static int try_calling(struct queue_ent *qe, char *options, char *announceoverri } /* Special case: If we ring everyone, go ahead and ring them, otherwise just calculate their metric for the appropriate strategy */ - if (!qe->parent->strategy) - ring_entry(qe, tmp); - else - calc_metric(qe->parent, cur, x++, qe, tmp); + calc_metric(qe->parent, cur, x++, qe, tmp); /* Put them in the list of outgoing thingies... We're ready now. XXX If we're forcibly removed, these outgoing calls won't get hung up XXX */ {noformat} Looks like that comment should've been removed. The ring_entry() is now done a bit later on, and is seemingly unrelated to this comment. It's still here, confusing the reader: {noformat} $ git log --format=oneline -1 origin/master c1ad1ea39147b77b786c10fee24af7912920551f (origin/master, origin/HEAD) Merge "media_cache.c: Various CLI improvements" $ git show origin/master:apps/app_queue.c | grep 'go ahead and ring them' -A13 /* Special case: If we ring everyone, go ahead and ring them, otherwise just calculate their metric for the appropriate strategy */ if (!calc_metric(qe->parent, cur, x++, qe, tmp)) { /* Put them in the list of outgoing thingies... We're ready now. XXX If we're forcibly removed, these outgoing calls won't get hung up XXX */ tmp->q_next = outgoing; outgoing = tmp; /* If this line is up, don't try anybody else */ if (outgoing->chan && (ast_channel_state(outgoing->chan) == AST_STATE_UP)) break; } else { callattempt_free(tmp); } {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-12-03 02:25:28.343-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: George Joseph (gjoseph) 2019-12-03 09:54:01.892-0600 Do you plan on submitting a patch to fix the comment? By: Walter Doekes (wdoekes) 2019-12-04 03:38:25.971-0600 Done (for master. Let me know if you want it cherry-picked to other branches). By: George Joseph (gjoseph) 2019-12-04 11:42:55.884-0600 I cherry picked them for you :) By: Friendly Automation (friendly-automation) 2019-12-06 13:31:15.032-0600 Change 13355 merged by Friendly Automation: app_queue: Fix old confusing comment about when the members are called [https://gerrit.asterisk.org/c/asterisk/+/13355|https://gerrit.asterisk.org/c/asterisk/+/13355] By: Friendly Automation (friendly-automation) 2019-12-06 13:32:49.388-0600 Change 13353 merged by Friendly Automation: app_queue: Fix old confusing comment about when the members are called [https://gerrit.asterisk.org/c/asterisk/+/13353|https://gerrit.asterisk.org/c/asterisk/+/13353] By: Friendly Automation (friendly-automation) 2019-12-06 13:36:41.703-0600 Change 13365 merged by Friendly Automation: app_queue: Fix old confusing comment about when the members are called [https://gerrit.asterisk.org/c/asterisk/+/13365|https://gerrit.asterisk.org/c/asterisk/+/13365] By: Friendly Automation (friendly-automation) 2019-12-09 05:46:41.630-0600 Change 13354 merged by Joshua Colp: app_queue: Fix old confusing comment about when the members are called [https://gerrit.asterisk.org/c/asterisk/+/13354|https://gerrit.asterisk.org/c/asterisk/+/13354] By: Friendly Automation (friendly-automation) 2020-06-17 08:33:49.831-0500 Change 14559 merged by Friendly Automation: app_queue: Remove stale code in try_calling [https://gerrit.asterisk.org/c/asterisk/+/14559|https://gerrit.asterisk.org/c/asterisk/+/14559] By: Friendly Automation (friendly-automation) 2020-06-17 08:33:59.853-0500 Change 14561 merged by Friendly Automation: app_queue: Remove stale code in try_calling [https://gerrit.asterisk.org/c/asterisk/+/14561|https://gerrit.asterisk.org/c/asterisk/+/14561] By: Friendly Automation (friendly-automation) 2020-06-17 08:38:55.395-0500 Change 14560 merged by Friendly Automation: app_queue: Remove stale code in try_calling [https://gerrit.asterisk.org/c/asterisk/+/14560|https://gerrit.asterisk.org/c/asterisk/+/14560] By: Friendly Automation (friendly-automation) 2020-06-17 09:35:52.385-0500 Change 14581 merged by George Joseph: app_queue: Remove stale code in try_calling [https://gerrit.asterisk.org/c/asterisk/+/14581|https://gerrit.asterisk.org/c/asterisk/+/14581] | ||