app_queue: Fix old confusing comment about when the members are called

ASTERISK-28644

Change-Id: I2771a931d00a8fc2b9f9a4d1a33ea8f1ad24e06b